--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@stripe/stripe-js": "^4.9.0",
+    "aws-sdk": "^2.1691.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "prisma": "^5.21.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "stripe": "^17.2.1"
+    "stripe": "^17.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
