--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.682.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@stripe/stripe-js": "^4.9.0",
@@ -18,7 +19,9 @@
     "prisma": "^5.21.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "stripe": "^17.3.0"
+    "react-dropzone": "^14.2.10",
+    "stripe": "^17.3.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
