--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@stripe/stripe-js": "^4.9.0",
     "aws-sdk": "^2.1691.0",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "prisma": "^5.21.1",
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
